# Analyzer

./: pyproject.toml  requirements.txt  run_grpc.py  test.py
auth/: __init__.py  auth.py  force_login.py  test_force_login.py
compute/: __init__.py  compute.py
config/: settings.py
docs/superpowers/plans/: 2026-04-15-fyers-login-fixes.md  2026-04-15-mcp-grpc-server.md  2026-05-04-auto-login-scheduler-and-telegram-frc.md
docs/superpowers/specs/: 2026-04-15-fyers-login-fixes-design.md  2026-04-15-mcp-grpc-server-design.md  2026-05-04-auto-login-scheduler-and-telegram-frc-design.md
grpc_service/: codegen.py  fyers.proto  server.py
market/: __init__.py  market.py
notify/: __init__.py  telegram.py  test_telegram.py
orders/: __init__.py  orders.py
scheduler/: __init__.py  scheduler.py  test_scheduler.py
